# redis-hllset-algebra

./: .gitignore  README.md  build_ext.py  main.py  pyproject.toml  requirements.txt  test_hllset_redis.py
DOCS/: BEST_PRACTICES.md  DEBRUIJN_DESIGN.md  DEBRUIJN_ROADMAP.md  average_over_hllset_registers.md
core/: __init__.py  bayesian.py  bayesian_network.py  bitvector_core.c  bitvector_core.pyx  bitvector_ring.py  bss.py  debruijn.py  disambiguation.py  evolution.py  global_registry.py  hll_constants.py  hll_core.c  hll_core.html  hll_core.pyx  hll_lattice.py  hll_tensor.py  hllset.py  hllset_debruijn.py  hllset_disambiguate.py  hllset_dynamics.py  hllset_redis.py  hllset_ring_store.py  hllset_store.py  hllset_store_redis.py  hllset_transformer.py  lattice_reconstruction.py  markov_hll.py  noether.py  ring_transaction.py  tokenlut_redis.py  tokenlut_session.py  tokenlut_stream.py
core/redis/: __init__.py  hllset_redis.py  hllset_ring_store.py  hllset_store_redis.py  tokenlut_redis.py  tokenlut_session.py  tokenlut_stream.py
docs/: HLLSET_RING_MODULE_DESIGN.md
docs/python/: 01_HLLSET.md  02_RING_ALGEBRA.md  03_TENSOR_LUT.md  04_DISAMBIGUATION.md  05_BSS_NOETHER.md  06_LATTICE_STORE.md  07_DEBRUIJN.md  08_BAYESIAN_MARKOV.md  09_REDIS_MODULES.md  QUICK_REFERENCE.md  README.md
redis-tutorials/: 01_hllset_redis.ipynb  02_tokenlut_redis.ipynb  03_disambiguation.ipynb  04_hllset_ring_store.ipynb  05_debruijn_redisgraph.ipynb  README.md
redis_hllset/: Dockerfile  REFACTORING_ROADMAP.md  docker-compose.yml  redis.conf
redis_hllset/arch/: hllset_redis_lua.py
redis_hllset/backups/: latest
redis_hllset/backups/20260414_121214/: functions.rdb  hllset.lua  keys.txt  manifest.json
redis_hllset/module/: Cargo.toml  Dockerfile  README.md  build.sh  redis.conf  test.sh
redis_hllset/module/benches/: hllset_bench.rs
redis_hllset/module/docs/: 01_OVERVIEW.md  02_DATA_STRUCTURES.md  03_HLLSET_COMMANDS.md  04_DISAMBIGUATION.md  05_RING_ALGEBRA.md  06_TOKENLUT_COMMANDS.md  07_BEST_PRACTICES.md  QUICK_REFERENCE.md  README.md
redis_hllset/module/src/: bias.rs  commands.rs  disambiguate.rs  hllset.rs  hllset_dense.rs  hllset_old.rs  lib.rs  rdb.rs  ring.rs  ring_commands.rs  tokenlut.rs
redis_hllset/scripts/: README.md  backup.sh  benchmark.sh  cleanup.sh  deploy.sh  env.sh  health_check.sh  hllset.sh  load_functions.sh  redis-cli.sh  repl.sh  restore.sh  start_redis.sh  stats.sh  test_hllset.sh  update_module.sh  watch.sh
redis_hllset_algebra/: __init__.py  hllset.py
redis_hllset_algebra/scripts/: hll_diff_card.lua  hll_intersect_card.lua  hll_symmdiff_card.lua  hll_union.lua
tests/: test_hllset.py  test_hllset_redis.py
tutorials/: 00_introduction.ipynb  01_hllset.ipynb  02_hll_tensor.ipynb  03_hll_lattice.ipynb  04_hllset_store.ipynb  05_global_registry.ipynb  06_ring_transaction.ipynb  07_bss.ipynb  08_debruijn.ipynb  09_hllset_debruijn.ipynb  10_disambiguation.ipynb  11_hllset_debruijn.ipynb  12_lattice_reconstruction.ipynb  13_observe.ipynb  14_act.ipynb  15_theory.ipynb  16_bayesian.ipynb  17_bn_ring_triangle.ipynb  18_markov_hll.ipynb  19_hllset_ai.ipynb
