[package]
name = "redis-hllset"
version = "0.1.0"
edition = "2021"
authors = ["HLLSet Algebra Project"]
description = "Native Redis module for HLLSet Algebra - HyperLogLog with set operations"
license = "MIT"
repository = "https://github.com/hllset-algebra/redis-hllset"
keywords = ["redis", "hyperloglog", "set-algebra", "probabilistic"]
categories = ["database", "data-structures"]

[lib]
crate-type = ["cdylib"]
name = "redis_hllset"

[dependencies]
# Redis module SDK
redis-module = "2.0"

# MurmurHash3 for consistent hashing
murmur3 = "0.5"

# SHA-1 for content-addressable keys
sha1 = "0.10"

# Hex encoding for key generation
hex = "0.4"

# Serialization for RDB persistence
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Roaring bitmap for compressed storage
roaring = { version = "0.10", features = ["serde"] }

# Logging
log = "0.4"

[dev-dependencies]
# Note: Criterion benchmarks disabled due to dependency conflicts
# criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

# Benchmarks disabled due to criterion dependency issues
# [[bench]]
# name = "hllset_bench"
# harness = false
